tests/errors/se_mixtabspace.pyx
def f():
 a = b # space space
	c = d # tab
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_mixtabspace.pyx:3:0: Mixed use of tabs and spaces
"""
